tests/cli/snapshots/cli__check__no_missing_key_when_defined.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
