tests/cli/snapshots/cli__check__order1.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - missing
    - hardcoded
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Common.submit"  missing-key
  --> ./src/app.tsx:6:22
  |
6 |             <button>{t("submit")}</button>
  |                      ^

error: "Hardcoded"  hardcoded
  --> ./src/app.tsx:7:19
  |
7 |             <span>Hardcoded</span>
  |                   ^


✘ 2 problems (2 errors, 0 warnings)

----- stderr -----
