tests/cli/snapshots/cli__check__parse_error_in_tsx.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----
error: "Failed to parse tsx string: Error { error: (14..14, Expected("</", "<eof>")) }"  [parse-error]
  --> ./src/broken.tsx:0:0


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
error: 1 file(s) could not be parsed (use -v for details)
