tests/cli/snapshots/cli__check__primary_locale_override.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - replica-lag
    - "--primary-locale"
    - ja
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 1 source file, 2 locale files - no issues found

----- stderr -----
