tests/cli/snapshots/cli__check__react_i18next_translation_recognized.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 1 source file, 1 locale file - no issues found

----- stderr -----
