tests/cli/snapshots/cli__check__real_world_nextjs_structure.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 2 source files, 2 locale files - no issues found

----- stderr -----
