tests/cli/snapshots/cli__check__replica_lag.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
warning: "Common.cancel"  unused-key
  --> ./messages/en.json:4:1
  = note: ("Cancel")

error: "Common.cancel"  replica-lag
  --> ./messages/en.json:4:1
  = note: ("Cancel") missing in: zh
  = used: (no usages found)


✘ 2 problems (1 error, 1 warning)

----- stderr -----
