tests/cli/snapshots/cli__check__replica_lag_multiple_locales.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
warning: "Common.submit"  unused-key
  --> ./messages/en.json:3:1
  = note: ("Submit")

error: "Common.submit"  replica-lag
  --> ./messages/en.json:3:1
  = note: ("Submit") missing in: ja, zh
  = used: (no usages found)


✘ 2 problems (1 error, 1 warning)

----- stderr -----
